# BVoice

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.svelte  Overlay.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  hotkey.rs  inject.rs  lib.rs  main.rs  model.rs  transcribe.rs  tray.rs  vad.rs
