[package]
name = "bvoice"
version = "0.1.1"
description = "Local push-to-talk speech-to-text"
authors = ["Erfan Fathi"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rdev = "0.5"
cpal = "0.15"
rubato = "0.16"
libpulse-binding = "2"
voice_activity_detector = "0.2"
anyhow = "1"
whisper-rs = "0.16"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
dirs = "5"

